--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         	<artifactId>cookieApiWarp</artifactId>
         	<version>0.1.1</version>
         </dependency>
+        <dependency>
+        	<groupId>de.kekshaus</groupId>
+        	<artifactId>CookieSocket-Official</artifactId>
+        	<version>0.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.name}</finalName>
