Try to fix startup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: ${project.version}
 description: Portalplugin
 authors: [Kekshaus]
 main: de.kekshaus.cookieApi.portal.Portalplugin
+load: POSTWORLD
+depend: [CookieApiBukkit]
 
 commands:
   setportal:
