--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.cookieapi</groupId>
     <artifactId>cookieApiPortal</artifactId>
-    <version>0.1.1</version>
+    <version>1.1.2</version>
     <name>cookieApiPortal</name>
 
     <dependencies>
@@ -74,4 +74,7 @@
       </plugin>
         </plugins>
     </build>
+    <properties>
+    <build.number>SNAPSHOT</build.number>
+</properties>
 </project>
