--- a/pom.xml
+++ b/pom.xml
@@ -7,28 +7,49 @@
     <version>1.1.2</version>
     <name>cookieApiPortal</name>
 
+	<repositories>
+      <repository>
+        <id>spigot-repo</id>
+        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+      </repository>
+        <repository>
+    <id>sk89q-snapshots</id>
+    <url>http://maven.sk89q.com/artifactory/repo</url>
+    <releases>
+      <enabled>true</enabled> <!-- releases enabled: this specific repository also hosts release versions -->
+    </releases>
+    <snapshots>
+      <enabled>true</enabled> <!-- snapshots enabled: we declare a SNAPSHOT repository because we need to download a SNAPSHOT dependency -->
+    </snapshots>
+  </repository>
+	</repositories>
     <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.9-R0.1-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/spigot-1.9.jar</systemPath>
-            <optional>true</optional>
-        </dependency>
+    <!--Spigot API-->
+    	<dependency>
+           <groupId>org.spigotmc</groupId>
+           <artifactId>spigot-api</artifactId>
+           <version>1.9.2-R0.1-SNAPSHOT</version>
+    	</dependency>
         <dependency>
         	<groupId>de.cookieapi</groupId>
         	<artifactId>cookieApiBukkit</artifactId>
         	<version>1.0</version>
         </dependency>
-        <dependency>
-        	<groupId>worldedit</groupId>
-        	<artifactId>wg-worldedit</artifactId>
-        	<scope>system</scope>
-        	<systemPath>${project.basedir}/lib/WorldEdit-1.8.jar</systemPath>
-        	<version>1.0</version>
-        	<optional>true</optional>
-        </dependency>
+<dependency>
+  <groupId>com.sk89q.worldedit</groupId>
+  <artifactId>worldedit-bukkit</artifactId>
+  <version>6.1.1-SNAPSHOT</version>
+  <exclusions>
+  	<exclusion>
+  		<artifactId>bukkit</artifactId>
+  		<groupId>org.bukkit</groupId>
+  	</exclusion>
+  	<exclusion>
+  		<artifactId>bukkit-classloader-check</artifactId>
+  		<groupId>org.sk89q.bukkit</groupId>
+  	</exclusion>
+  </exclusions>
+</dependency>
         <dependency>
         	<groupId>de.cookieapi</groupId>
         	<artifactId>cookieApiWarp</artifactId>
