--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
         </plugins>
     </build>
     <properties>
-    <build.number>SNAPSHOT</build.number>
-</properties>
+    	<build.number>SNAPSHOT</build.number>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
