--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.cookieapi</groupId>
     <artifactId>cookieApiPortal</artifactId>
-    <version>1.1.2</version>
+    <version>1</version>
     <name>cookieApiPortal</name>
 
 	<repositories>
@@ -33,7 +33,7 @@
         <dependency>
         	<groupId>de.cookieapi</groupId>
         	<artifactId>cookieApiBukkit</artifactId>
-        	<version>1.0</version>
+        	<version>1</version>
         </dependency>
 <dependency>
   <groupId>com.sk89q.worldedit</groupId>
@@ -53,12 +53,12 @@
         <dependency>
         	<groupId>de.cookieapi</groupId>
         	<artifactId>cookieApiWarp</artifactId>
-        	<version>0.1.1</version>
+        	<version>1</version>
         </dependency>
         <dependency>
         	<groupId>de.kekshaus</groupId>
-        	<artifactId>CookieSocket-Official</artifactId>
-        	<version>0.5.0</version>
+        	<artifactId>CookieSocket</artifactId>
+        	<version>1</version>
         </dependency>
     </dependencies>
     <build>
