--- a/pom.xml
+++ b/pom.xml
@@ -1,97 +1,102 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.nlinz.xeonSuite</groupId>
-    <artifactId>XeonSuitePortal</artifactId>
-    <version>1</version>
-    <name>XeonSuitePortal</name>
+	<groupId>de.nlinz.xeonSuite</groupId>
+	<artifactId>XeonSuitePortal</artifactId>
+	<version>1</version>
+	<name>XeonSuitePortal</name>
 
 	<repositories>
-      <repository>
-        <id>spigot-repo</id>
-        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-      </repository>
-        <repository>
-    <id>sk89q-snapshots</id>
-    <url>http://maven.sk89q.com/artifactory/repo</url>
-    <releases>
-      <enabled>true</enabled> <!-- releases enabled: this specific repository also hosts release versions -->
-    </releases>
-    <snapshots>
-      <enabled>true</enabled> <!-- snapshots enabled: we declare a SNAPSHOT repository because we need to download a SNAPSHOT dependency -->
-    </snapshots>
-  </repository>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
+			<id>sk89q-snapshots</id>
+			<url>http://maven.sk89q.com/artifactory/repo</url>
+			<releases>
+				<enabled>true</enabled> <!-- releases enabled: this specific repository also hosts release versions -->
+			</releases>
+			<snapshots>
+				<enabled>true</enabled> <!-- snapshots enabled: we declare a SNAPSHOT repository because we need 
+					to download a SNAPSHOT dependency -->
+			</snapshots>
+		</repository>
+		<repository>
+			<id>Bytearray-repo</id>
+			<url>https://repo.bytearray.de/</url>
+		</repository>
 	</repositories>
-    <dependencies>
-    <!--Spigot API-->
-    	<dependency>
-           <groupId>org.spigotmc</groupId>
-           <artifactId>spigot-api</artifactId>
-           <version>1.9.4-R0.1-SNAPSHOT</version>
-    	</dependency>
-<dependency>
-  <groupId>com.sk89q.worldedit</groupId>
-  <artifactId>worldedit-bukkit</artifactId>
-  <version>6.1.3-SNAPSHOT</version>
-  <exclusions>
-  	<exclusion>
-  		<artifactId>bukkit</artifactId>
-  		<groupId>org.bukkit</groupId>
-  	</exclusion>
-  	<exclusion>
-  		<artifactId>bukkit-classloader-check</artifactId>
-  		<groupId>org.sk89q.bukkit</groupId>
-  	</exclusion>
-  </exclusions>
-</dependency>
-        <dependency>
-        	<groupId>de.nlinz.xeonSuite</groupId>
-        	<artifactId>XeonSuiteBukkit</artifactId>
-        	<version>1</version>
-        </dependency>
-        <dependency>
-        	<groupId>de.nlinz.xeonSuite</groupId>
-        	<artifactId>XeonSuiteWarp</artifactId>
-        	<version>1</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <finalName>${project.name}</finalName>
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-                <includes>
-                    <include>**</include>
-                </includes>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.1</version>
-        <configuration>
-          <archive>
-            <addMavenDescriptor>false</addMavenDescriptor>
-          </archive>
-          <finalName>${project.name}</finalName>
-        </configuration>
-      </plugin>
-        </plugins>
-    </build>
-    <properties>
-    	<build.number>SNAPSHOT</build.number>
+	<dependencies>
+		<!--Spigot API -->
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.9.4-R0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sk89q.worldedit</groupId>
+			<artifactId>worldedit-bukkit</artifactId>
+			<version>6.1.3-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>bukkit</artifactId>
+					<groupId>org.bukkit</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bukkit-classloader-check</artifactId>
+					<groupId>org.sk89q.bukkit</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>de.nlinz.xeonSuite</groupId>
+			<artifactId>XeonSuiteBukkit</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.nlinz.xeonSuite</groupId>
+			<artifactId>XeonSuiteWarp</artifactId>
+			<version>1</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>${project.name}</finalName>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
+					<finalName>${project.name}</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<properties>
+		<build.number>SNAPSHOT</build.number>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
