--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: XeonSuitePortal
-version: ${project.version}.b${build.number}
+version: ${project.version}
 description: Portalplugin
 authors: [Kekshaus]
 main: de.nlinz.xeonSuite.portal.Portalplugin
