--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!--
+  ~ Copyright (C) 2018. MineGaming - All Rights Reserved
+  ~ You may use, distribute and modify this code under the
+  ~ terms of the LGPLv3 license, which unfortunately won't be
+  ~ written for another century.
+  ~
+  ~  You should have received a copy of the LGPLv3 license with
+  ~  this file. If not, please write to: niklas.linz@enigmar.de
+  ~
+  -->
+
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<name>XeonSuitePortal</name>
+	<name>mineSuitePortal</name>
 
 	<repositories>
-		<repository>
-			<id>enigmar-repo</id>
-			<url>https://repository.enigmar.de/</url>
-		</repository>
 		<repository>
 			<id>sk89q-snapshots</id>
 			<url>http://maven.sk89q.com/artifactory/repo</url>
@@ -15,9 +22,13 @@
 				<enabled>true</enabled> <!-- releases enabled: this specific repository also hosts release versions -->
 			</releases>
 			<snapshots>
-				<enabled>true</enabled> <!-- snapshots enabled: we declare a SNAPSHOT repository because we need 
+				<enabled>true</enabled> <!-- snapshots enabled: we declare a SNAPSHOT repository because we need
 					to download a SNAPSHOT dependency -->
 			</snapshots>
+		</repository>
+		<repository>
+			<id>spigot-server-repo</id>
+			<url>http://maven.elmakers.com/repository/</url>
 		</repository>
 	</repositories>
 	<dependencies>
@@ -52,20 +63,15 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.spigotmc-1_12</groupId>
+			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot</artifactId>
-			<version>1.12-R0.1-SNAPSHOT</version>
-			<optional>true</optional>
+			<version>1.12.2-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.linzn</groupId>
-			<artifactId>xeonSuiteBukkit</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>de.linzn</groupId>
-			<artifactId>xeonSuiteWarp</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
+			<artifactId>mineSuiteCore</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -85,8 +91,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -103,15 +109,11 @@
 			</plugin>
 		</plugins>
 	</build>
-	<artifactId>xeonSuitePortal</artifactId>
-	<version>1.0.2-${build.number}</version>
+	<artifactId>mineSuitePortal</artifactId>
+	<version>2.0.0</version>
 	<groupId>de.linzn</groupId>
-	<dependencyManagement>
-		<dependencies>
-		</dependencies>
-	</dependencyManagement>
+
 	<properties>
-		<build.number>SNAPSHOT</build.number>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
