--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,13 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <version>1.13-pre7-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>mineSuiteCore</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.0</version>
         </dependency>
     </dependencies>
     <build>
